Finalise the website
there is still dummy content, but the web site itself is finalised
Views.py was simplified to a single finction that returns the same
template with a markdown file based on the url name.

The padding issue was fixed 3w md file.

--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -1,7 +1,7 @@
 ## Everyone Loves Markdown
 
+### <a name="what" style="padding-top:90px; display:inline-block;"></a>What
 
-## heading<a name="headin"></a>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod aliquet est, id feugiat tellus
         vulputate eu.
         Donec rhoncus massa sed ligula egestas, sit amet posuere ante pulvinar. Donec enim nunc, maximus quis
@@ -23,6 +23,36 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod aliquet est,
         id,
         congue
         et lectus.
+
+
+### <a name="why" style="padding-top:90px; display:inline-block;"></a>Why
+
+Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
+        tristique
+        sed.
+        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
+        lorem
+        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
+        molestie.
+        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
+        maximus
+        tempor.
+
+
+### <a name="who" style="padding-top:90px; display:inline-block;"></a>Who
+Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
+        tristique
+        sed.
+        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
+        lorem
+        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
+        molestie.
+        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
+        maximus
+        tempor.
+
+
+### <a name="how" style="padding-top:90px; display:inline-block;"></a>How
 
 
 Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
