--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -2,66 +2,32 @@
 
 ### <a name="what" style="padding-top:90px; display:inline-block;"></a>What
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod aliquet est, id feugiat tellus
-        vulputate eu.
-        Donec rhoncus massa sed ligula egestas, sit amet posuere ante pulvinar. Donec enim nunc, maximus quis
-        dictum
-        eget,
-        convallis sit amet velit. Donec aliquam euismod blandit. Nulla molestie commodo sodales. Etiam rhoncus
-        non enim
-        vel
-        consequat. Mauris maximus diam ac velit ullamcorper rhoncus. Donec eget ex rhoncus, sodales ex
-        convallis,
-        hendrerit
-        est. Vivamus neque neque, auctor id pretium et, gravida vitae mauris. Ut eget orci sit amet mauris
-        pharetra
-        egestas
-        lacinia nec velit. Nam facilisis finibus feugiat. Suspendisse volutpat dictum sagittis. Fusce lobortis
-        rutrum ex
-        ac
-        placerat. Nullam porttitor sapien at nisi mattis commodo. Vivamus turpis neque, feugiat id sollicitudin
-        id,
-        congue
-        et lectus.
+What is it that we need to learn?
 
 
 ### <a name="why" style="padding-top:90px; display:inline-block;"></a>Why
 
-Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
-        tristique
-        sed.
-        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
-        lorem
-        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
-        molestie.
-        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
-        maximus
-        tempor.
+Why do we need to learn kubernetes (or any other containers orchestrator)
 
 
 ### <a name="who" style="padding-top:90px; display:inline-block;"></a>Who
-Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
-        tristique
-        sed.
-        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
-        lorem
-        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
-        molestie.
-        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
-        maximus
-        tempor.
+Who needs to learn
 
 
 ### <a name="how" style="padding-top:90px; display:inline-block;"></a>How
 
 
-Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
-        tristique
-        sed.
-        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
-        lorem
-        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
-        molestie.
-        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
-        maximus
-        tempor.
+More importantly - How do we get there?
+
+Having some development skills, e.g. Python or Javascript really helps
+
+Having descent Linux skills, particularly with CLI and bash really helps
+
+Docker 101 course is essential. 
+
+Kubernetes comes last when you are all prepared. 
+
+On top of that you would really want to get familiar with git and basic CI/CD workflows
+
+
+
