Update content and add Commit twitter button

--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -1,33 +1,62 @@
-## Everyone Loves Markdown
-
-### <a name="what" style="padding-top:90px; display:inline-block;"></a>What
-
-What is it that we need to learn?
 
 
-### <a name="why" style="padding-top:90px; display:inline-block;"></a>Why
+### <a name="what" style="padding-top:90px; display:inline-block;">What are we going to learn?</a>
 
-Why do we need to learn kubernetes (or any other containers orchestrator)
+Container orchestration is about managing the lifecycles of containers. Companies use container orchestration to automate the following tasks:
 
-
-### <a name="who" style="padding-top:90px; display:inline-block;"></a>Who
-Who needs to learn
-
-
-### <a name="how" style="padding-top:90px; display:inline-block;"></a>How
-
-
-More importantly - How do we get there?
-
-Having some development skills, e.g. Python or Javascript really helps
-
-Having descent Linux skills, particularly with CLI and bash really helps
-
-Docker 101 course is essential. 
-
-Kubernetes comes last when you are all prepared. 
-
-On top of that you would really want to get familiar with git and basic CI/CD workflows
+* Configuring and scheduling of containers
+* Provisioning and deployment of containers
+* Availability of containers
+* Scaling of containers to equally balance application workloads across infrastructure
+* Load balancing, traffic routing and service discovery of containers
+* Allocation of resources between containers
+* External exposure of services running in a container with the outside world
+* Health monitoring of containers and hosts
+* Securing the interactions between containers.
 
 
+
+### <a name="why" style="padding-top:90px; display:inline-block;">Why do we need to learn kubernetes now?</a>
+
+* Kubernetes is one of the most popular open-sourced container orchestration engines avaiable. More and more companies are looking for developers and devops engineers with Kubernetes experience. 
+* Kubernetes had the fastest year-over-year surge in job searches among IT professionals.
+
+<img src="/static/image/jobs-graph.png" style="max-width: 100%;">
+
+* I personally believe Kubernetes will be become a core skill of many IT professions in a very near future. 
+
+### <a name="who" style="padding-top:90px; display:inline-block;">Who needs to learn containers orchestration</a>
+
+While Kubernetes is not a 
+
+
+### <a name="how" style="padding-top:90px; display:inline-block;">How to learn Kubernetes</a>
+Below is the list of essential skills that will help you learn Kubernetes. This list is based on my own experience and may not 100% fit your skillset, but it is a good starting point. 
+
+1. Get comfortable with Linux and bash
+
+    While taking kubernetes trainings you will be primarily using Linux CLI. There will be a lot of examples of commands and bash scripts. Learning basics of Linux CLI/bash will make your training process more efficient and faster.
+
+2. Get familiar with YAML and JSON
+
+    These are the two main data formats used in Kubernetes. Learning both types probably won't take you more than 30 minutes, but will save your hours during practice labs and CKA exam. 
+
+3. Start learning some programming language. 
+
+    All K8s trainings I tried are using generic nginx images when it comes to practice tasks. What I noticed is that when you work on a containerised app that you created yourself there are more intersting use cases to practice and the whole training process becomes more meaningful and interesting. For instance, I used a couple of my own simple apps I had created while studying Python and moving them to a container running on K8s cluster was way more exciting experience that spinning up generic containers that don't do much. 
+
+4. Learn how to build a container
+
+    This relates to the previous point. Once you can create you own app you should definitely learn how to containerise it. Going from zero to your very first Dockerfile takes less than an hour, but you may also want to get a proper Docker 101 training to esnure you don't miss some important concepts of containers. 
+
+5. Kubernetes introduction
+
+    There are tons of Kubernetes trainings and you can feel overwhelmed trying to find the right one. So, my advice here is to start slow. Unless you already have hands-on experience with K8s I would recommend to start with official training program from [Linux Foundation](https://www.linuxfoundation.org).
+
+    My first K8s training i tried went into technical details of setting up minikube and kubelctl without a proper explanationo of the concepts of containers orchestration.  
+
+    
+5. (optionally) Learn basics of CI/CD
+
+    While CI/CD practices do not directly apply to Kubernetes study topcis, there is a high probability that in your work with K8s there will be regular exposure to CI/CD concepts and tools.
 
