first version to go

--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -23,12 +23,14 @@ Container orchestration is about managing the lifecycles of containers. Companie
 
 <img src="/static/image/jobs-graph.png" style="max-width: 100%;">
 
-* I personally believe Kubernetes will be become a core skill of many IT professions in a very near future. 
+* I personally believe Kubernetes will be become a core skill for many IT professionals in a very near future. 
 
 ### <a name="who" style="padding-top:90px; display:inline-block;">Who needs to learn containers orchestration</a>
 
-While Kubernetes is not a 
-
+* Developers - as main consumers of Kubernetes
+* Infrastructure administrators - as people responsible for delivery of Kubernetes-ready platforms 
+* Devops engineers - those that make sure both teams mentioned above can excerise set of practices to shorten development life cycle and provide continiuous delivery
+* Any other IT geek that loves new hot technologies 
 
 ### <a name="how" style="padding-top:90px; display:inline-block;">How to learn Kubernetes</a>
 Below is the list of essential skills that will help you learn Kubernetes. This list is based on my own experience and may not 100% fit your skillset, but it is a good starting point. 
