fix typos and grammar errors

--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -16,20 +16,20 @@ Container orchestration is about managing the lifecycles of containers. Companie
 
 
 
-### <a name="why" style="padding-top:90px; display:inline-block;">Why do we need to learn kubernetes now?</a>
+### <a name="why" style="padding-top:90px; display:inline-block;">Why do we need to learn Kubernetes now?</a>
 
-* Kubernetes is one of the most popular open-sourced container orchestration engines avaiable. More and more companies are looking for developers and devops engineers with Kubernetes experience. 
+* Kubernetes is one of the most popular open-sourced container orchestration engines available. More and more companies are looking for developers and DevOps engineers with Kubernetes experience. 
 * Kubernetes had the fastest year-over-year surge in job searches among IT professionals.
 
 <img src="/static/image/jobs-graph.png" style="max-width: 100%;">
 
-* I personally believe Kubernetes will be become a core skill for many IT professionals in a very near future. 
+* I believe Kubernetes will become a core skill for many IT professionals in a very near future. 
 
 ### <a name="who" style="padding-top:90px; display:inline-block;">Who needs to learn containers orchestration</a>
 
 * Developers - as main consumers of Kubernetes
 * Infrastructure administrators - as people responsible for delivery of Kubernetes-ready platforms 
-* Devops engineers - those that make sure both teams mentioned above can excerise set of practices to shorten development life cycle and provide continiuous delivery
+* DevOps engineers - those that make sure both teams mentioned above can exercise set of practices to shorten development life cycle and provide continuous delivery
 * Any other IT geek that loves new hot technologies 
 
 ### <a name="how" style="padding-top:90px; display:inline-block;">How to learn Kubernetes</a>
@@ -37,7 +37,7 @@ Below is the list of essential skills that will help you learn Kubernetes. This 
 
 1. Get comfortable with Linux and bash
 
-    While taking kubernetes trainings you will be primarily using Linux CLI. There will be a lot of examples of commands and bash scripts. Learning basics of Linux CLI/bash will make your training process more efficient and faster.
+    While taking Kubernetes trainin you will be primarily using Linux CLI. There will be a lot of examples of commands and bash scripts. Learning basics of Linux CLI/bash will make your training process more efficient and faster.
 
 2. Get familiar with YAML and JSON
 
@@ -45,20 +45,20 @@ Below is the list of essential skills that will help you learn Kubernetes. This 
 
 3. Start learning some programming language. 
 
-    All K8s trainings I tried are using generic nginx images when it comes to practice tasks. What I noticed is that when you work on a containerised app that you created yourself there are more intersting use cases to practice and the whole training process becomes more meaningful and interesting. For instance, I used a couple of my own simple apps I had created while studying Python and moving them to a container running on K8s cluster was way more exciting experience that spinning up generic containers that don't do much. 
+    All K8s training courses I tried are very often using generic nginx images when it comes to practice tasks. What I noticed is that when you work on a containerised app that you created yourself there are more interesting use cases to practice and the whole training process becomes more meaningful and interesting. For instance, I used a couple of my simple apps I had created while studying Python and moving them to a container running on K8s cluster was a way more exciting experience that spinning up generic containers that don't do much. 
 
 4. Learn how to build a container
 
-    This relates to the previous point. Once you can create you own app you should definitely learn how to containerise it. Going from zero to your very first Dockerfile takes less than an hour, but you may also want to get a proper Docker 101 training to esnure you don't miss some important concepts of containers. 
+    This relates to the previous point. Once you can create your app you should learn how to containerise it. Going from zero to your very first Dockerfile takes less than an hour, but you may also want to get a proper Docker 101 training to ensure you don't miss some important concepts of containers. 
 
 5. Kubernetes introduction
 
-    There are tons of Kubernetes trainings and you can feel overwhelmed trying to find the right one. So, my advice here is to start slow. Unless you already have hands-on experience with K8s I would recommend to start with official training program from [Linux Foundation](https://www.linuxfoundation.org).
+    There are tons of Kubernetes training courses and you can feel overwhelmed trying to find the right one. So, my advice here is to start slow. Unless you already have hands-on experience with K8s I would recommend starting with the official training program from [Linux Foundation](https://www.linuxfoundation.org).
 
-    My first K8s training i tried went into technical details of setting up minikube and kubelctl without a proper explanationo of the concepts of containers orchestration.  
+    The first K8s training I tried went into technical details of setting up minikube and kubelctl without a proper explanation of the concepts of containers orchestration.  
 
     
-5. (optionally) Learn basics of CI/CD
+5. (optionally) Learn the basics of CI/CD
 
-    While CI/CD practices do not directly apply to Kubernetes study topcis, there is a high probability that in your work with K8s there will be regular exposure to CI/CD concepts and tools.
+    While CI/CD practices do not directly apply to Kubernetes study topics, there is a high probability that in your work with K8s there will be regular exposure to CI/CD concepts and tools.
 
