Fix two more  grammar mistakes

--- a/website/content/3w.md
+++ b/website/content/3w.md
@@ -30,14 +30,14 @@ Container orchestration is about managing the lifecycles of containers. Companie
 * Developers - as main consumers of Kubernetes
 * Infrastructure administrators - as people responsible for delivery of Kubernetes-ready platforms 
 * DevOps engineers - those that make sure both teams mentioned above can exercise set of practices to shorten development life cycle and provide continuous delivery
-* Any other IT geek that loves new hot technologies 
+* Any other IT geek that loves hot technologies 
 
 ### <a name="how" style="padding-top:90px; display:inline-block;">How to learn Kubernetes</a>
 Below is the list of essential skills that will help you learn Kubernetes. This list is based on my own experience and may not 100% fit your skillset, but it is a good starting point. 
 
 1. Get comfortable with Linux and bash
 
-    While taking Kubernetes trainin you will be primarily using Linux CLI. There will be a lot of examples of commands and bash scripts. Learning basics of Linux CLI/bash will make your training process more efficient and faster.
+    While taking Kubernetes training you will be primarily using Linux CLI. There will be a lot of examples of commands and bash scripts. Learning basics of Linux CLI/bash will make your training process more efficient and faster.
 
 2. Get familiar with YAML and JSON
 
